<resources>
    <string name="app_name">Ebola RISK</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Information</string>
    <string name="continue_button">Continue to the app</string>
    <string name="calc_risk">Calculate risk</string>
    <string name="risk_button">RISK</string>
    <string name="info_title">Important information</string>
    <string name="info_paragraph1">
        "Ebola RISK is a proof-of-concept app designed to illustrate how Machine Learning "
        "models for clinical prognosis could inform patient care and management. It offers "
        "treatment options compiled from WHO\'s guidelines for hemorrhagic fever patients, "
        "prioritized by predicted mortality risk."</string>
    <string name="info_paragraph2">
        "Because it is a research prototype, this app should NOT be used to make treatment "
        "decisions on actual patients."</string>
    <string name="info_paragraph4">
        "Get the preprint of the article describing the derivation and validation of the models from:"</string>
    <string name="info_age_intro">"Enter age of patient either in years or months. Typically, providing age in years is enough for adult patients, but for children younger than 2 years, age should be given in months because the dosage of certain drugs depends on the month."</string>
    <string name="info_age_years">"Age in years:"</string>
    <string name="info_age_months">"Age in months:"</string>
    <string name="info_weight_intro">"Enter weight of patient. If precise age in months is not available for young children, then weight will be used to recommend dosage of certain drugs."</string>
    <string name="info_weight_kg">"Weight in kg:"</string>
    <string name="vitals_intro">"Measure the vitals of patient upon arrival at the treatment center and record them below."</string>
    <string name="vitals_temp">"Temperature in °C:"</string>
    <string name="clinical_intro">"Record below the observed signs and reported symptoms at admission, using the 'Do not know' option if it is not possible to determine whether the sign/symptom is present or not."</string>
    <string name="clinical_diarr">"Diarrhoea:"</string>
    <string name="clinical_weak">"Asthenia/Weakness:"</string>
    <string name="clinical_jaun">"Jaundice:"</string>
    <string name="clinical_bleed">"Bleeding:"</string>
    <string name="clinical_head">"Headache:"</string>
    <string name="clinical_vomit">"Vomiting:"</string>
    <string name="clinical_pain">"Abdomen pain:"</string>
    <string name="clinical_yes">"Yes"</string>
    <string name="clinical_no">"No"</string>
    <string name="clinical_dontknow">"Do not know"</string>
    <string name="lab_intro">"Use this section to record all available results from laboratory tests."</string>
    <string name="lab_pcr">"RT-PCR Cycle Threshold:"</string>
    <string name="hrisk_msg">
    "Based on presentation signs, symptoms, and PCR data, this patient has "
    "more than %d%% chance of dying. Reassess for emergency "
    "clinical signs, monitor input and output by the bedside, and perform priority lab testing "
    "if possible."
    </string>
    <string name="lmrisk_msg">
    "Based on presentation signs, symptoms, and PCR data, this patient has "
    "less than %d%% chance of dying. Make sure the patient "
    "remains stable, by keeping him or her hydrated and taking care of any clinical signs "
    "with the appropriate procedure."
    </string>
    <string name="no_data_err1">"Not enough information!"</string>
    <string name="no_data_err2">"You need to provide at least patient's age and RT-PCR Cycle Threshold (CT) value."</string>
    <string name="patient_risk">"Mortality risk of patient"</string>
    <string name="predictor_contrib">"Contribution from each predictor"</string>
    <string name="hrisk_patient">"HIGH RISK PATIENT"</string>
    <string name="lmrisk_patient">"LOW/MEDIUM RISK PATIENT"</string>
    <string name="hrisk_reason">"This elevated risk is due to:"</string>
    <string name="lmrisk_reason">"This risk is due to:"</string>
    <string name="var_alias">"PCR CT:Age:Temperature:Jaundice:Bleeding:Headache:Diarrhoea:Vomiting:Abdomen pain:Weakness:Wellness"</string>
    <string name="bleed_title1">"Bleeding"</string>
    <string name="bleed_parag1">"Transfusion of fresh whole blood or red blood cell components should be considered, guided by clinical and ideally laboratory indicators:"</string>
    <string name="bleed_clinical_title">"Clinical indicators"</string>
    <string name="bleed_clinical_item1">"  ◘ Severe pallor"</string>
    <string name="bleed_clinical_item2">"  ◘ Fast pulse rate (tachycardia, >100bpm)"</string>
    <string name="bleed_clinical_item3">"  ◘ Difficulty breathing (dyspnea)"</string>
    <string name="bleed_clinical_item4">"  ◘ Confusion"</string>
    <string name="bleed_clinical_item5">"  ◘ Restlessness"</string>
    <string name="bleed_lab_title">"Laboratory indicators"</string>
    <string name="bleed_lab_item1">"  ◘ Hgb ≤ 5 g/dl"</string>
    <string name="bleed_lab_item2">"  ◘ Hematocrit ≤ 15"</string>
    <string name="bleed_lab_item3">"  ◘ INR ≥ 1.2"</string>
    <string name="bleed_vitk_title">"Vitamin K deficiency"</string>
    <string name="bleed_vitk_parag1">"Many malnourished or ill patients with diminished oral intake, and those treated with antibiotics, have mild vitamin K deficiency which may lead to elevations in INR/PPT and predispose to bleeding."</string>
    <string name="bleed_vitk_parag2">"Multivitamin and/or vitamin K administration in these patients is reasonable (e.g. 10 mg vitamin K PO 1x/d for 3 days at admission, or 10 mg intravenously for those unable to take pills, who are bleeding and who have IV access). Treatment of significant bleeding with fresh frozen plasma should ideally be guided by INR/PT."</string>
    <string name="bleed_add_title">Additional treatment"</string>
    <string name="bleed_add_parag">Other medications to prevent or treat bleeding such as antifibrinolytics (IV tranexamic acid) may be reasonable based on extrapolation of evidence from other patient populations but direct evidence in patients with Ebola is lacking."</string>
    <string name="vload_title1">"High viral load and severely ill patients"</string>
    <string name="vload_intro">"High viral load is the most direct indication of a severe case. It is important to regularly:"</string>
    <string name="vload_list_item1">"◘ Reassess for emergency clinical signs and use the Ebola-simplified Quick Check or another triage/severity score and the ETAT for children."</string>
    <string name="vload_list_item2">"◘ Monitor input and output (when possible) and record at the bedside. When impractical to document separately (in several buckets), the total volume of urine, vomit and stool collected in a bedside bucket may be qualitatively or quantitatively estimated based on volume measures marked on the outside of the bucket."</string>
    <string name="vload_list_item3">"◘ Priority lab testing for ill patients:"</string>
    <string name="vload_list_item3a">"   ○ electrolytes : K, Na, HCO3"</string>
    <string name="vload_list_item3b">"   ○ glucose"</string>
    <string name="vload_list_item3c">"   ○ creatinine"</string>
    <string name="vload_list_item3d">"   ○ lactate"</string>
    <string name="vload_list_item3e">"   ○ for women of childbearing age: pregnancy test"</string>
    <string name="vload_list_item4">"◘ Secondary priority:"</string>
    <string name="vload_list_item4a">"    ○ magnesium"</string>
    <string name="vload_list_item4b">"    ○ haemoglobin or hematocrit"</string>
    <string name="vload_list_item4c">"    ○ platelet count"</string>
    <string name="vload_list_item4d">"    ○ INR and PTT"</string>
    <string name="vload_shock_title">"Shock"</string>
    <string name="vload_shock_list_item1">"◘ General signs of shock (poor perfusion):"</string>
    <string name="vload_shock_list_item1a">"   ○ Fast, weak pulse"</string>
    <string name="vload_shock_list_item1b">"   ○ Pallor or cold extremities"</string>
    <string name="vload_shock_list_item1c">"   ○ Prolonged capillary refill (>3 seconds)"</string>
    <string name="vload_shock_list_item1d">"   ○ Dizziness or inability to stand"</string>
    <string name="vload_shock_list_item1e">"   ○ Decreased urine output (≤30 ml/hour)"</string>
    <string name="vload_shock_list_item1f">"   ○ Difficulty breathing / Dyspnea"</string>
    <string name="vload_shock_list_item1g">"   ○ Impaired consciousness, lethargy, agitation, confusion"</string>
    <string name="vload_shock_list_item1h">"   ○ Low BP (SBP≤90 mmHg in adults; check SBP by age/weight of child)"</string>
    <string name="vload_shock_list_item2">"◘ Call for help from the most experienced clinician available when an Ebola patient develops shock."</string>
    <string name="vload_shock_list_item3">"◘ EVD patients can be in shock from hypovolaemic from GI loss (most common in the 2014- 2015 outbreak), septic shock or haemorrhagic shock (uncommon) or a combination of these."</string>
    <string name="vload_breath_title">"Difficulty breathing and respiratory distress"</string>
    <string name="vload_breath_parag">"Oxygen: titrate to Sp02≥90%. If SpO2&lt;90%, start adult on 5 litres/minute (nasal prongs); start child at 1–2 litres/minute (nasal prongs). In the acute phase of shock (first 24 hours) in children, where there is impaired oxygen delivery, also give oxygen if SpO2&lt;94%. Evaluate for pneumonia, wheezing, fluid overload, congestive heart failure and manage accordingly. (Do not share nasal prongs–dispose of them once used by a patient.)"</string>
    <string name="vload_anxiety_title">"Anxiety"</string>
    <string name="vload_anxiety_parag">"Provide psychological support. Depression, associated with feelings of hopelessness and/or suicidal thoughts, may be present. See section 10.11 (Mental health problems) in the IMAI District Clinician Manual for their management. Diazepam – adults: 5–15 mg/day in 3 divided doses may be considered in severe cases."</string>
    <string name="vload_confusion_coop_title">"Confusion in cooperative patient"</string>
    <string name="vload_confusion_coop_parag">"Reason with the patient in a calm and non-aggressive fashion. Keep lights on at night. Consider diazepam 5 mg at night (adult)."</string>
    <string name="vload_agit_noncoop_title">"Agitation, confusion and aggression in non-cooperative adult patient"</string>
    <string name="vload_agit_noncoop_parag">"Give sedation: haloperidol 2.5 to 5 mg IM (depending on size of adult). Approach patient with caution, call for assistance, and give treatment only if safe to do so."</string>
    <string name="vload_neuro_title">"Unexplained neurological symptoms"</string>
    <string name="vload_neuro_parag">"This includes peripheral neuropathy, cranial nerve palsies, encephalopathy, aphonia, and cardiac failure. Consider thiamine deficiency (beriberi) and give vitamin B1: 50 mg IM or IV daily for several days."</string>
    <string name="jaundice_title1">"Jaundice and liver damage"</string>
    <string name="jaundice_parag1">"Jaundice is not common in EVD, but it likely indicates an acute case with damage to the parenchymal cells of liver. Confirm Hepatic/hepatocellular jaundice by urine tests (dark urine, presence of conjugated bilirubin, urobilirubin > 2 units). Follow up closely and apply appropriate treatment for other signs/symptoms."</string>
    <string name="jaundice_title2">"Nutrition recommendations"</string>
    <string name="jaundice_parag2">"Exercise caution when feeding the patient who have no appetite. Even in critically ill patients without severe dehydration, excess energy or protein is not needed and an excess could further compromise liver and kidney function."</string>
</resources>